--- a/PART_1_ JS_basics/practice(43_50)/index.html
+++ b/PART_1_ JS_basics/practice(43_50)/index.html
@@ -67,9 +67,9 @@
                         <span>Введите название фильма</span>
                         <input class="adding__input" type="text" placeholder="Что уже посмотрено...?">
                         <span>Сделать его любимым?</span>
-                        <input type="checkbox">
+                        <input type="checkbox" id="ifFavorite">
                         <span class="yes">Да!</span>
-                        <button>Подтвердить</button>
+                        <button id="btn-add">Подтвердить</button>
                     </form>
                 </div>
             </div>
